Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -18,7 +18,7 @@
 \input{sec/conclusion}
 
 % \input{sec/acks}  % double blind review
-%\bibliographystyle{plain}
+\bibliographystyle{plain}
 \bibliography{refs}
 %\printbibliography
 
