--- a/preamble.tex
+++ b/preamble.tex
@@ -36,22 +36,22 @@
 % End of 'ignore natbib' hack
 
 % sort and compress citations
-\usepackage[%
-backend=biber,
-style=numeric-comp,
-sorting=none,        % nty,nyt,nyvt,anyt,anyvt,ynt,ydnt,none
-sortcites=true,      % sort \cite{b a d c}: true,false
-block=none,          % space between blocks: none,space,par,nbpar,ragged
-indexing=false,      % indexing options: true,false,cite,bib
-citereset=none,      % don't reset cites
-isbn=false,          % print ISBN?
-url=true,            % print URL?
-doi=false,           % print DOI?
-natbib=true,         % natbib compatability
-maxbibnames=99       % no 'et-al' condensing author names in biliography
-]{biblatex}
+%\usepackage[%
+%backend=biber,
+%style=numeric-comp,
+%sorting=none,        % nty,nyt,nyvt,anyt,anyvt,ynt,ydnt,none
+%sortcites=true,      % sort \cite{b a d c}: true,false
+%block=none,          % space between blocks: none,space,par,nbpar,ragged
+%indexing=false,      % indexing options: true,false,cite,bib
+%citereset=none,      % don't reset cites
+%isbn=false,          % print ISBN?
+%url=true,            % print URL?
+%doi=false,           % print DOI?
+%natbib=true,         % natbib compatability
+%maxbibnames=99       % no 'et-al' condensing author names in biliography
+%]{biblatex}
 
-\addbibresource{./refs.bib}
+%\addbibresource{./refs.bib}
 
 \usepackage{graphicx}
 
@@ -98,7 +98,7 @@ maxbibnames=99       % no 'et-al' condensing author names in biliography
 % Source code listings.
 \usepackage{listings,lstautogobble}
 \lstset{%
-  basicstyle=\scriptsize,%
+  basicstyle=\footnotesize,%
   numbers=left,%
   xleftmargin=1em,
   framexleftmargin=2.5em,
