--- a/refs.bib
+++ b/refs.bib
@@ -11601,7 +11601,7 @@
 @inproceedings{Cummins2017b,
     title = {{End-to-end Deep Learning of Optimization Heuristics}},
     year = {2017},
-    booktitle = {PACT, to appear in},
+    booktitle = {PACT},
     author = {Cummins, C. and Petoumenos, P. and Wang, Z. and Leather, H.},
     publisher = {IEEE}
 }
@@ -11934,4 +11934,12 @@
     isbn = {9781450350761},
     doi = {10.1145/3092703.3092720},
     keywords = {Auto-mated testing, Compilers, Embedded software, GPUs, KEYWORDS Functional testing, Source code generation}
+}
+
+@article{Ching2017a,
+    title = {{Opportunities and obstacles for deep learning in biology and medicine}},
+    year = {2017},
+    author = {Ching, Travers and Himmelstein, Daniel S and Beaulieu-Jones, Brett K and Kalinin, Alexandr A and Do, Brian T and Way, Gregory P and Ferrero, Enrico and Agapow, Paul-Michael and Xie, Wei and Rosen, Gail L and Lengerich, Benjamin J and Israeli, Johnny},
+    url = {http://dx.doi.org/10.1101/142760},
+    doi = {10.1101/142760}
 }
