--- a/sec/methodology.tex
+++ b/sec/methodology.tex
@@ -5,7 +5,7 @@ In this section we describe the particular experimental parameters used.
 \subsection{OpenCL Systems}
 
 \begin{table*}[t!]
-  \scriptsize %
+  \footnotesize %
   \centering %
   % \rowcolors{2}{white}{gray!25}
   \input{build/tab/platforms}
