--- a/preamble.tex
+++ b/preamble.tex
@@ -60,24 +60,22 @@
 
 %\usepackage{csquotes}
 %
-%% no border around links
-%\usepackage{xcolor}
-%\hypersetup{
-%    colorlinks,
-%    linkcolor={black},
-%    citecolor={black},
-%    urlcolor={black}
-%}
-%
+% no border around links
+\usepackage{xcolor}
+\hypersetup{
+   colorlinks,
+   linkcolor={black},
+   citecolor={black},
+   urlcolor={black}
+}
+
+% Author comments:
 \usepackage{color}
 \newcommand{\cc}[1]{{\color{orange}{\emph{(CC)} #1}}}
 \newcommand{\hl}[1]{{\color{blue}{\emph{(HL)} #1}}}
 \newcommand{\pp}[1]{{\color{cyan}{\emph{(PP)} #1}}}
 \newcommand{\am}[1]{{\color{purple}{\emph{(AM)} #1}}}
-%
-%\usepackage[normalem]{ulem}
-%
-
+\newcommand{\todo}[1]{{\color{red}{\textbf{#1}}}}
 
 % Tables.
 \usepackage{booktabs}
