Update on Overleaf.

--- a/sec/eval.tex
+++ b/sec/eval.tex
@@ -450,7 +450,8 @@ The Clang front-end to LLVM supports OpenCL, and is commonly used in OpenCL driv
 
 Figure~\ref{fig:clangs} shows that the crash rate of Clang front-ends is, for the most part, steadily decreasing over time. The number of failing compiler crashes decreased tenfold between 3.6.2 and 6.0.0.
 %\cc{Does that suggest that DeepSmith is finding bugs which developers are interested in fixing?} \pp{We do find interesting bugs, but the important question is whether we are more likely to find interesting bugs than CLSmith.}
-Table~\ref{tab:clangs} shows the 7 distinct assertions triggered during this experiment. Assertion 1 (uncorrected typos) is raised on all compiler versions --- see Figure~\ref{lst:oclgrind-uncorrected-typos} for an example. The overall rate at which the assertion is triggered has decreased markedly, although there are slight increases between releases. Release 6.0.0 has the second lowest crash rate, but is joint first in terms of the number of unique assertions. Assertions 3 and 4 where triggered by some kernels under version 6.0.0 but not under any other tested Clang version. We have submitted bug reports for each of the three assertions triggered in LLVM 6.0.0, and two distinct unreachables.
+Table~\ref{tab:clangs} shows the 7 distinct assertions triggered during this experiment. Assertion 1 (uncorrected typos) is raised on all compiler versions --- see Figure~\ref{lst:oclgrind-uncorrected-typos} for an example. The overall rate at which the assertion is triggered has decreased markedly, although there are slight increases between releases. The development trunk (6.0.0) has the second lowest crash rate, but is joint first in terms of the number of unique assertions. Assertions 3 and 4 where triggered by some kernels under version 6.0.0 but not under any other tested Clang version. We have submitted bug reports for each of the three assertions triggered in LLVM 6.0.0, and two distinct unreachables.
+\am{5.0 isn't quite out yet, 6.0 won't be out for six months!  Call "Release 6.0" something like "Trunk (6.0)"?}
 
 \begin{table}
   \footnotesize %
